--- a/proceso.html
+++ b/proceso.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
  <title>Bitlab</title>
  <meta charset="UTF-8">
@@ -21,11 +22,31 @@
   <div class="menu-container">
    <p>Menú</p>
    <ul>
-    <li><a href="daniel.html#main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
-    <li><a href="daniel.html#services" onclick="toggleMenu()"><span>Servicios</span></a></li>
-    <li><a href="proceso.html" onclick="toggleMenu()"><span>Proceso</span></a></li>
-    <li><a href="nosotros.html" onclick="toggleMenu()"><span>Nosotros</span></a></li>
-    <li><a href="daniel.html#clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
+    <li>
+     <a href="daniel.html#main" onclick="toggleMenu()">
+      <span>Inicio</span>
+     </a>
+    </li>
+    <li>
+     <a href="daniel.html#services" onclick="toggleMenu()">
+      <span>Servicios</span>
+     </a>
+    </li>
+    <li>
+     <a href="proceso.html" onclick="toggleMenu()">
+      <span>Proceso</span>
+     </a>
+    </li>
+    <li>
+     <a href="nosotros.html" onclick="toggleMenu()">
+      <span>Nosotros</span>
+     </a>
+    </li>
+    <li>
+     <a href="daniel.html#clients" onclick="toggleMenu()">
+      <span>Clientes</span>
+     </a>
+    </li>
    </ul>
   </div>
  </div>
@@ -36,122 +57,154 @@
   <a class="closeContact" onclick="toggleContact()">Cerrar</a>
   <div class="contact-container">
    <h3>Contáctanos</h3>
-    <h4>say hello!</h4>
-    <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    <h3 style="font-size:14px;">info@bitlab.mx</h3>
-    <form action="#">
-     <div class="minform">
-      Nombre: <input type="text"></br>
-      Empresa: <input type="text"></br>
-      E-Mail: <input type="text"></br>
-      Mensaje: <input type="text"></br>
-     </div>
-     <input type="submit" class="buttonform">
-    </form>
-   </div>
-  </div>
-  <!--Contacto-->
-
-
-
-  <div>
-   <a href="daniel.html#main"><img class="logo" src="img/bitlab.png"></a>
-   <img class="menu" src="img/menu.png" onclick="toggleMenu()">
-   <div class="contactBtn" onclick="toggleContact()">Contacto</div>
-  </div>
-
-
-  <!--Main-->
-  <div id="fullpage">
-   <div class="section mainproceso">
-    <h1>Conoce nuestro proceso de trabajo</h1>
-    <a href="#procesocontent">
-     <img class="arrow" src="img/flecha.png"/>
-    </a>
-   </div>
-   <!--Proces-->
-   <div class="section procesocontent" data-anchor="procesocontent">
-    <div class="center" >
-     <h3>Consultoría sin costo ni obligaciones.</h3>
-     <h4>El camino al éxito</h4>
-     <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
+   <h4>say hello!</h4>
+   <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+   <h3 style="font-size:14px;">info@bitlab.mx</h3>
+   <form action="#">
+    <div class="minform">
+     Nombre:
+     <input type="text">
+     </br>
+     Empresa:
+     <input type="text">
+     </br>
+     E-Mail:
+     <input type="text">
+     </br>
+     Mensaje:
+     <input type="text">
+     </br>
     </div>
+    <input type="submit" class="buttonform">
+   </form>
+  </div>
+ </div>
+ <!--Contacto-->
+
+
+
+ <div>
+  <a href="daniel.html#main">
+   <img class="logo" src="img/bitlab.png">
+  </a>
+  <img class="menu" src="img/menu.png" onclick="toggleMenu()">
+  <div class="contactBtn" onclick="toggleContact()">Contacto</div>
+ </div>
+
+
+ <!--Main-->
+ <div id="fullpage">
+  <div class="section mainproceso">
+   <h1>Conoce nuestro proceso de trabajo</h1>
+   <a href="#procesocontent">
+    <img class="arrow" src="img/flecha.png" />
+   </a>
+  </div>
+  <!--Proces-->
+  <div class="section procesocontent" data-anchor="procesocontent">
+   <div class="center">
+    <h3>Consultoría sin costo ni obligaciones.</h3>
+    <h4>El camino al éxito</h4>
+    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
    </div>
-   <!--Pasos-->
-   <div class="section pasos">
+  </div>
+  <!--Pasos-->
+  <div class="section pasos">
    <div class="pasoscontent">
-<div class="ilust"><img src="img/descubrir.png"></div>
-    <div class="contentpasos">
-     <h1>01</h1>
-     <h4>Descubrir</h4>
-     <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+    <div class="stepcontainer">
+     <div class="ilust contentleft">
+      <img src="img/descubrir.png">
+     </div>
+     <div class="contentpasos contentright">
+      <h1>01</h1>
+      <h4>Descubrir</h4>
+      <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+     </div>
     </div>
-   </br>
-   <div class="contentpasos">
-    <h1>02</h1>
-    <h4>Diseñar</h4>
-    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+    <div class="stepcontainer">
+     <div class="ilust contentright">
+      <img src="img/diseñar.png">
+     </div>
+     <div class="contentpasos contentleft">
+      <h1>02</h1>
+      <h4>Diseñar</h4>
+      <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+     </div>
+    </div>
+    <div class="stepcontainer">
+     <div class="ilust contentleft">
+      <img src="img/desarrollo.png">
+     </div>
+     <div class="contentpasos contentright">
+      <h1>03</h1>
+      <h4>Desarrollar</h4>
+      <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+     </div>
+    </div>
+    <div class="stepcontainer">
+     <div class="ilust contentright">
+      <img src="img/celebrar.png">
+     </div>
+     <div class="contentpasos contentleft">
+      <h1>04</h1>
+      <h4>Celebrar</h4>
+      <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
+     </div>
+    </div>
    </div>
-   <div class="ilust"><img src="img/diseñar.png"></div>
-  </br>
-  <div class="ilust"><img src="img/desarrollo.png"></div>
-  <div class="contentpasos">
-   <h1>03</h1>
-   <h4>Desarrollar</h4>
-   <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
   </div>
- </br>
- <div class="contentpasos">
-  <h1>04</h1>
-  <h4>Celebrar</h4>
-  <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
- </div>
- <div class="ilust"><img src="img/celebrar.png"></div>
-</div>
-</div>
 
-<div class="section" data-anchor="clients">
+  <div class="section" data-anchor="clients">
 
- <div class="fullcontact">
+   <div class="fullcontact">
     <div class="container-fullcontact">
-    <div class="textform">
-    <h3 style="color:black">Contáctanos</3>
-    <h4 style="color:black">say hello!</h4>
-    <p style="margin-top:-35px;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    <h3 style="color:black; margin-top:200px;font-size:14px;">info@bitlab.mx</h3>
+     <div class="textform">
+      <h3>Contáctanos</3>
+       <h4>say hello!</h4>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+       <h3 class="correo">info@bitlab.mx</h3>
+     </div>
     </div>
+    <div class="container-fullcontact">
+     <form action="#">
+      <div class="fullform">
+       Nombre:
+       <input type="text">
+       </br>
+       Empresa:
+       <input type="text">
+       </br>
+       E-Mail:
+       <input type="text">
+       </br>
+       Mensaje:
+       <input class="largeinput" type="text">
+      </div>
+      </br>
+      <input type="submit" class="buttonform">
+     </form>
     </div>
-<div class="container-fullcontact">
-<form action="#">
-<div class="fullform">
-Nombre: <input type="text"></br>
-Empresa: <input type="text"></br>
-E-Mail: <input type="text"></br>
-Mensaje: <input style="height:100px" type="text">
-</div>
-</br><input type="submit" class="buttonform">
-</form>
-</div>
    </div>
-  <div class="footer">
-   <div class="footercontent">
-    <div class="footertitle">conócenos</div>
-    <div class="footertext">Piedras Negras #229,</br>Col. Mitras Centro C.P. 64650</br>+52 (81) 21392290
+   <div class="footer">
+    <div class="footercontent">
+     <div class="footertitle">conócenos</div>
+     <div class="footertext">Piedras Negras #229,</br>Col. Mitras Centro C.P. 64650</br>+52 (81) 21392290
+     </div>
+    </div>
+    <div class="footercontent">
+     <div class="footertitle">Say hello to us</div>
+     <div class="footertext">jobs@bitlab.mx</div>
+     <div class="footertext"><a href="#">Facebook</a></div>
+     <div class="footertext"><a href="#">LinkedIn</a></div>
+    </div>
+    <div class="footercontent">
+     <div class="footerrights" style="bottom:75px; right:100px">2015 - BITLAB - All rights reserved</div>
     </div>
    </div>
-   <div class="footercontent">
-    <div class="footertitle">Say hello to us</div>
-    <div class="footertext">jobs@bitlab.mx</div>
-    <div class="footertext"><a href="#">Facebook</a></div>
-    <div class="footertext"><a href="#">LinkedIn</a></div>
-   </div>
-   <div class="footercontent">
-    <div class="footerrights" style="position:absolute; bottom:75px; right:100px">2015 - BITLAB - All rights reserved</div>
-   </div>
+
   </div>
 
  </div>
-
-</div>
 </body>
+
 </html>
