--- a/nosotros.html
+++ b/nosotros.html
@@ -74,9 +74,9 @@
   </div>
   <!--Process-->
   <div class="section nosotroscontent" data-anchor="nosotroscontent">
-   <div class="row">
-    <div class="image"></div>
-    <div class="contenidoTexto">
+   <div class="row uscontainer">
+    <div class="image contentleft"></div>
+    <div class="contenidoTexto contentright">
      <div class="textnosotros">
       <h1>01</h1>
       <h4>Quienes somos</h4>
@@ -85,8 +85,9 @@
      </div>
     </div>
    </div>
-   <div class="row">
-    <div class="contenidoTexto">
+   <div class="row uscontainer">
+     <div class="image contentright"></div>
+    <div class="contenidoTexto contentleft">
      <div class="textnosotros">
       <h1>02</h1>
       <h4>Quienes somos</h4>
@@ -94,11 +95,11 @@
       <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</p>
      </div>
     </div>
-         <div class="image"></div>
+
    </div>
-   <div class="row">
-    <div class="image"></div>
-    <div class="contenidoTexto">
+   <div class="row uscontainer">
+    <div class="image contentleft"></div>
+    <div class="contenidoTexto contentright">
      <div class="textnosotros">
       <h1>03</h1>
       <h4>Quienes somos</h4>
@@ -122,7 +123,7 @@
 <br>
 <div class="person"><img src="img/person.png"/><br><h1>Américo Guajardo</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
 <div class="person"><img src="img/person.png"/><br><h1>Franciso Lumbreras</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><div class="unete"><h1>únete a<br>nuestro<br>equipo</h1><br><div class="button">Escríbenos</div></div></div>
+<div class="unetecontainer"><div class="unete"><h1>únete a<br>nuestro<br>equipo</h1><br><div class="unetebtn">Escríbenos</div></div></div>
 </div>
 
 <div class="footer">
@@ -138,7 +139,7 @@
   <div class="footertext"><a href="#">LinkedIn</a></div>
  </div>
  <div class="footercontent">
-  <div class="footerrights" style="position:absolute; bottom:75px; right:100px;">2015 - BITLAB - All rights reserved</div>
+  <div class="footerrights">2015 - BITLAB - All rights reserved</div>
  </div>
 </div>
 
