Corrección contacto proceso responsive

--- a/nosotros.html
+++ b/nosotros.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
  <title>Bitlab</title>
  <meta charset="UTF-8">
@@ -22,11 +23,31 @@
   <div class="menu-container">
    <p>Menú</p>
    <ul>
-    <li><a href="daniel.html#main"	onclick="toggleMenu()"><span>Inicio</span></a></li>
-    <li><a href="daniel.html#services" onclick="toggleMenu()"><span>Servicios</span></a></li>
-    <li><a href="proceso.html" onclick="toggleMenu()"><span>Proceso</span></a></li>
-    <li><a href="nosotros.html" onclick="toggleMenu()"><span>Nosotros</span></a></li>
-    <li><a href="daniel.html#clients" onclick="toggleMenu()"><span>Clientes</span></a></li>
+    <li>
+     <a href="daniel.html#main" onclick="toggleMenu()">
+      <span>Inicio</span>
+     </a>
+    </li>
+    <li>
+     <a href="daniel.html#services" onclick="toggleMenu()">
+      <span>Servicios</span>
+     </a>
+    </li>
+    <li>
+     <a href="proceso.html" onclick="toggleMenu()">
+      <span>Proceso</span>
+     </a>
+    </li>
+    <li>
+     <a href="nosotros.html" onclick="toggleMenu()">
+      <span>Nosotros</span>
+     </a>
+    </li>
+    <li>
+     <a href="daniel.html#clients" onclick="toggleMenu()">
+      <span>Clientes</span>
+     </a>
+    </li>
    </ul>
   </div>
  </div>
@@ -37,29 +58,39 @@
   <a class="closeContact" onclick="toggleContact()">Cerrar</a>
   <div class="contact-container">
    <h3>Contáctanos</h3>
-    <h4>say hello!</h4>
-    <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    <h3 style="font-size:14px;">info@bitlab.mx</h3>
-    <form action="#">
-     <div class="minform">
-      Nombre: <input type="text"></br>
-      Empresa: <input type="text"></br>
-      E-Mail: <input type="text"></br>
-      Mensaje: <input type="text"></br>
-     </div>
-     <input type="submit" class="buttonform">
-    </form>
-   </div>
+   <h4>say hello!</h4>
+   <p style="margin-top:-35px">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+   <h3 style="font-size:14px;">info@bitlab.mx</h3>
+   <form action="#">
+    <div class="minform">
+     Nombre:
+     <input type="text">
+     </br>
+     Empresa:
+     <input type="text">
+     </br>
+     E-Mail:
+     <input type="text">
+     </br>
+     Mensaje:
+     <input type="text">
+     </br>
+    </div>
+    <input type="submit" class="buttonform">
+   </form>
   </div>
-  <!--Contacto-->
+ </div>
+ <!--Contacto-->
 
 
 
-  <div>
-   <a href="daniel.html#main"><img class="logo" src="img/bitlab.png"></a>
-   <img class="menu" src="img/menu.png" onclick="toggleMenu()">
-   <div class="contactBtn" onclick="toggleContact()">Contacto</div>
-  </div>
+ <div>
+  <a href="daniel.html#main">
+   <img class="logo" src="img/bitlab.png">
+  </a>
+  <img class="menu" src="img/menu.png" onclick="toggleMenu()">
+  <div class="contactBtn" onclick="toggleContact()">Contacto</div>
+ </div>
 
 
 
@@ -69,7 +100,7 @@
   <div class="section mainnosotros">
    <h1>We are bitlab</h1>
    <a href="#nosotroscontent">
-    <img class="arrow" src="img/flecha.png"/>
+    <img class="arrow" src="img/flecha.png" />
    </a>
   </div>
   <!--Process-->
@@ -81,18 +112,22 @@
       <h1>01</h1>
       <h4>Quienes somos</h4>
       <h3>Conócenos un poco mas</h3>
-      <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</p>
+      <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado
+       Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados;
+       una vida, se puede decir, poco ortográfica.</p>
      </div>
     </div>
    </div>
    <div class="row uscontainer">
-     <div class="image contentright"></div>
+    <div class="image contentright"></div>
     <div class="contenidoTexto contentleft">
      <div class="textnosotros">
       <h1>02</h1>
       <h4>Quienes somos</h4>
       <h3>Conócenos un poco mas</h3>
-      <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</p>
+      <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado
+       Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados;
+       una vida, se puede decir, poco ortográfica.</p>
      </div>
     </div>
 
@@ -104,48 +139,108 @@
       <h1>03</h1>
       <h4>Quienes somos</h4>
       <h3>Conócenos un poco mas</h3>
-      <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados; una vida, se puede decir, poco ortográfica.</p>
+      <p>Muy lejos, más allá de las montañas de palabras, alejados de los países de las vocales y las consonantes, viven los textos simulados. Viven aislados en casas de letras, en la costa de la semántica, un gran océano de lenguas. Un riachuelo llamado
+       Pons fluye por su pueblo y los abastece con las normas necesarias. Hablamos de un país paraisomático en el que a uno le caen pedazos de frases asadas en la boca. Ni siquiera los todopoderosos signos de puntuación dominan a los textos simulados;
+       una vida, se puede decir, poco ortográfica.</p>
      </div>
     </div>
    </div>
   </div>
 
   <div class="section people">
-<div class="rowpeople">
-<h1>Nuestro<br>equipo</h1>
-<div class="person"><img src="img/person.png"/><br><h1>Daniel Ávila</h1><h3>CEO & Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Alberto Rodríguez</h1><h3>CEO & Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Leslie Valencia</h1><h3>Graphic Designer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<br>
-<div class="person"><img src="img/person.png"/><br><h1>Raúl Amador</h1><h3>Graphic Designer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Erick Bernal</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Jorge Chávez</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<br>
-<div class="person"><img src="img/person.png"/><br><h1>Américo Guajardo</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="person"><img src="img/person.png"/><br><h1>Franciso Lumbreras</h1><h3>Developer</h3><div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div></div>
-<div class="unetecontainer"><div class="unete"><h1>únete a<br>nuestro<br>equipo</h1><br><div class="unetebtn">Escríbenos</div></div></div>
-</div>
+   <div class="rowpeople">
+    <h1>Nuestro
+     <br>equipo</h1>
+    <div class="person">
+     <img src="img/person.png" />
+     <br>
+     <h1>Daniel Ávila</h1>
+     <h3>CEO & Developer</h3>
+     <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
+    </div>
+    <div class="person">
+     <img src="img/person.png" />
+     <br>
+     <h1>Alberto Rodríguez</h1>
+     <h3>CEO & Developer</h3>
+     <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
+    </div>
+    <div class="person">
+     <img src="img/person.png" />
+     <br>
+     <h1>Leslie Valencia</h1>
+     <h3>Graphic Designer</h3>
+     <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
+    </div>
+    <br>
+    <div class="person">
+     <img src="img/person.png" />
+     <br>
+     <h1>Raúl Amador</h1>
+     <h3>Graphic Designer</h3>
+     <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
+    </div>
+    <div class="person">
+     <img src="img/person.png" />
+     <br>
+     <h1>Erick Bernal</h1>
+     <h3>Developer</h3>
+     <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
+    </div>
+    <div class="person">
+     <img src="img/person.png" />
+     <br>
+     <h1>Jorge Chávez</h1>
+     <h3>Developer</h3>
+     <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
+    </div>
+    <br>
+    <div class="person">
+     <img src="img/person.png" />
+     <br>
+     <h1>Américo Guajardo</h1>
+     <h3>Developer</h3>
+     <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
+    </div>
+    <div class="person">
+     <img src="img/person.png" />
+     <br>
+     <h1>Franciso Lumbreras</h1>
+     <h3>Developer</h3>
+     <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
+    </div>
+    <div class="unetecontainer">
+     <div class="unete">
+      <h1>únete a
+       <br>nuestro
+       <br>equipo</h1>
+      <br>
+      <div class="unetebtn">Escríbenos</div>
+     </div>
+    </div>
+   </div>
 
-<div class="footer">
- <div class="footercontent">
-  <div class="footertitle">conócenos</div>
-  <div class="footertext">Piedras Negras #229,</br>Col. Mitras Centro C.P. 64650</br>+52 (81) 21392290
+   <div class="footer">
+    <div class="footercontent">
+     <div class="footertitle">conócenos</div>
+     <div class="footertext">Piedras Negras #229,</br>Col. Mitras Centro C.P. 64650</br>+52 (81) 21392290
+     </div>
+    </div>
+    <div class="footercontent">
+     <div class="footertitle">Say hello to us</div>
+     <div class="footertext">jobs@bitlab.mx</div>
+     <div class="footertext"><a href="#">Facebook</a></div>
+     <div class="footertext"><a href="#">LinkedIn</a></div>
+    </div>
+    <div class="footercontent">
+     <div class="footerrights">2015 - BITLAB - All rights reserved</div>
+    </div>
+   </div>
+
   </div>
- </div>
- <div class="footercontent">
-  <div class="footertitle">Say hello to us</div>
-  <div class="footertext">jobs@bitlab.mx</div>
-  <div class="footertext"><a href="#">Facebook</a></div>
-  <div class="footertext"><a href="#">LinkedIn</a></div>
- </div>
- <div class="footercontent">
-  <div class="footerrights">2015 - BITLAB - All rights reserved</div>
- </div>
-</div>
-
-  </div>
 
 
 
- </body>
- </html>
+</body>
+
+</html>
