Problemas con footer index (tablet)

--- a/proceso.html
+++ b/proceso.html
@@ -198,7 +198,7 @@
      <div class="footertext"><a href="#">LinkedIn</a></div>
     </div>
     <div class="footercontent">
-     <div class="footerrights" style="bottom:75px; right:100px">2015 - BITLAB - All rights reserved</div>
+     <div class="footerrights">2015 - BITLAB - All rights reserved</div>
     </div>
    </div>
 
