--- a/nosotros.html
+++ b/nosotros.html
@@ -210,7 +210,7 @@
      <div class="text">Lorem ipsum dolor sit amet, viven los textos simulados.</div>
     </div>
     <div class="unetecontainer">
-     <div class="unete">
+     <div class="unetenos">
       <h1>únete a
        <br>nuestro
        <br>equipo</h1>
