--- a/proceso.html
+++ b/proceso.html
@@ -105,7 +105,7 @@
    <div class="center">
     <h3>Consultoría sin costo ni obligaciones.</h3>
     <h4>El camino al éxito</h4>
-    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
+    <div class="textprocesomain">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
    </div>
   </div>
   <!--Pasos-->
