--- a/daniel.html
+++ b/daniel.html
@@ -161,7 +161,7 @@
    </a>
   </div>
   <!--Clientes-->
-  <div class="section clients" data-anchor="clients">
+  <div class="section clientsnfooter" data-anchor="clients">
    <div class="clients">
     <p class="title-clients">Nuestros clientes</p>
     <div class="client-container">
