--- a/proceso.html
+++ b/proceso.html
@@ -103,6 +103,7 @@
   <!--Process-->
   <div class="section procesocontent" data-anchor="procesocontent">
     <div class="center">
+      <img class="ilust" src=""/>
       <h3>Consultoría sin costo ni obligaciones.</h3>
       <h4>El camino al éxito</h4>
       <div class="textprocesomain">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
@@ -110,7 +111,7 @@
     <img class="arrow" src="img/flechab.png" />
   </div>
   <!--Pasos-->
-  <div class="section pasos">
+  <div class="section pasos"> 
     <div class="pasoscontent">
       <div class="stepcontainer">
         <div class="ilust contentleft">
