Ilustración proceso.html

--- a/daniel.html
+++ b/daniel.html
@@ -148,7 +148,6 @@
             <a href="proceso.html">
               <div class="button" style="margin-top:15px;">Saber más</div>
             </a>
-
           </div>
         </div>
       </div>
@@ -161,7 +160,7 @@
         </a>
       </div>
       <!--Clientes-->
-      <div class="section clientsnfooter" data-anchor="clients">
+      <div class="section <clientsnfo>  </clientsnfo>oter" data-anchor="clients">
         <div class="clients">
           <p class="title-clients">Nuestros clientes</p>
           <div class="client-container">
