--- a/proceso.html
+++ b/proceso.html
@@ -102,13 +102,22 @@
   </div>
   <!--Process-->
   <div class="section procesocontent" data-anchor="procesocontent">
-    <div class="center">
-      <img class="ilust" src=""/>
-      <h3>Consultoría sin costo ni obligaciones.</h3>
-      <h4>El camino al éxito</h4>
-      <div class="textprocesomain">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</div>
-    </div>
-    <img class="arrow" src="img/flechab.png" />
+    <div class="rowproceso">
+      <div class="container50">
+        <img class="ilustproceso" src="img/Exito.png" />
+      </div>
+      <div class="container50">
+        <div class="text">
+          <h3>Consultoría sin costo ni obligaciones.</h3>
+          <h4>El camino al éxito</h4>
+            <p class="textproceso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi
+              velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+            </div>
+          </div>
+          <a href="proceso.html">
+            <img class="arrow" src="img/flechab.png"/>
+          </a>
+        </div>
   </div>
   <!--Pasos-->
   <div class="section pasos">
