Ajustes proceso.html

--- a/proceso.html
+++ b/proceso.html
@@ -110,17 +110,16 @@
         <div class="text">
           <h3>Consultoría sin costo ni obligaciones.</h3>
           <h4>El camino al éxito</h4>
-            <p class="textproceso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci. Suspendisse eleifend, tortor eget convallis tincidunt, mi
-              velit bibendum eros, eget consequat nisl justo sit amet lectus. Sed ornare elementum sapien et luctus. Nam elementum urna in blandit ornare. Suspendisse sed tortor vel lacus ultrices lobortis quis eget quam.</p>
+            <p class="textproceso">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada dictum mauris, sit amet porttitor nisl dignissim eget. Integer ac felis volutpat, pharetra risus quis, posuere orci.</p>
             </div>
           </div>
-          <a href="proceso.html">
+          <a href="#pasos">
             <img class="arrow" src="img/flechab.png"/>
           </a>
         </div>
   </div>
   <!--Pasos-->
-  <div class="section pasos">
+  <div class="section pasos" data-anchor="pasos">
     <div class="pasoscontent">
       <div class="stepcontainer">
         <div class="ilust contentleft">
